--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html, body
 
 body
 {
-background-image: linear-gradient(to right top, #33a0f1, #2591d9, #1882c1, #0a73aa, #006494);
+background-image: linear-gradient(to right top, #33a0f1, #69c3ff, #a4deff, #d9f9ff, #ffffff);
 }
 
 .header
